2009-07-08  Michael Biebl  <mbiebl@gmail.com>

	* contrib/vim/syntax/upstart.vim: Upstart job syntax highlighting
	* contrib/vim/ftdetect/upstart.vim: Use for the /etc/init directory
	* contrib/Makefile.am: Include the vim syntax files in the
	distribution
	* configure.ac (AC_CONFIG_FILES): Create contrib/Makefile
	* Makefile.am (SUBDIRS): Recurse into the contrib sub-directory

2009-07-08  Scott James Remnant  <scott@netsplit.com>

	* conf/rc.conf: This doesn't need to be an instance job, Upstart
	will do the right thing and stop the task before starting it again
	with the new environment (I spent so much time on that, you'd think
	I'd remember :p)

	* conf/control-alt-delete.conf: Default job for Control-Alt-Delete
	* conf/rc-sysinit.conf: Default job for system initialisation
	* conf/rc.conf: A fully wacky instance job that runs the rc script
	for runlevel changes
	* conf/rcS.conf: And a job for single-user-mode, which calls back
	to rc-sysinit
	* conf/Makefile.am (dist_init_DATA): Install the default files
	into the /etc/init directory
	* configure.ac (AC_CONFIG_FILES): Create conf/Makefile
	* Makefile.am (SUBDIRS): Recurse into the conf directory.

	* util/initctl.c (upstart_open, start_action, stop_action)
	(restart_action, status_action, list_action): Don't auto-start
	the init daemon, it makes no sense.
	(upstart_open): When not running from the test suite, and not as
	root, it makes sense to default to using the system bus daemon.
	* util/tests/test_initctl.c (test_upstart_open): Make sure that
	auto-start is FALSE, not TRUE.
	* NEWS: Update.

	* util/Makefile.am (dist_man_MANS): Oops, had the wrong name for
	the runlevel(7) manpage.

	* util/shutdown.c: Gets a bit of a redress, but not much of rewrite
	since this is largely just compatibility madness.
	(shutdown_now): Port to use sysv_change_runlevel()
	(warning_message): Construct plural forms a little better.
	(wall): use utmpx, rather than utmp
	* util/man/shutdown.8: Minor tweaks and improvements